Add basic Model constructor, pyramid model and switching btw em

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
   <canvas id="canvas" width="640" height="480" style="border: 1px solid #000;"></canvas>
   <script src="utils.js"></script>
   <script src="cube.js"></script>
+
+  <p>Hold down mouse and move to rotate the model</p>
+  <p>Ctrl+Click to cycle between models</p>
 </body>
 </html>
