--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   <script src="cube.js"></script>
 
   <p>Hold down mouse and move to rotate the model</p>
-  <p>Ctrl+Click to cycle between models</p>
+  <p>Meta+Click to cycle between models</p>
 </body>
 </html>
